--- a/StoreExample/Views/Home/Index.cshtml
+++ b/StoreExample/Views/Home/Index.cshtml
@@ -57,12 +57,12 @@
 
                     @if (User.IsInRole("Admin"))
                     {
-                        @Html.ActionLink("Изменить", "Edit", "Instrumental", new { id = item2.Id }, null)
+                        @Html.ActionLink("Изменить", "Edit", "Phone", new { id = item2.Id }, null)
 
-                        @Html.ActionLink("Удалить", "Delete", "Instrumental", new { id = item2.Id }, null)
+                        @Html.ActionLink("Удалить", "Delete", "Phone", new { id = item2.Id }, null)
                     }
                     @*<a href="~/Instrumental/Details/@item.Id">Подробнее</a>*@
-                    @Html.ActionLink("Подробнее", "Details", "Instrumental", new { id = item2.Id }, null)
+                    @Html.ActionLink("Подробнее", "Details", "Phone", new { id = item2.Id }, null)
 
                     @*@Html.ActionLink("Удалить","Delete", "Instrumental", item.Id)*@
                 </td>
