--- a/StoreExample/Views/Shared/_Layout.cshtml
+++ b/StoreExample/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                 @Html.ActionLink("Вход", "Login", "Account", new { area = "" }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Регистрация", "Register", "Account", new { area = "" }, new { @class = "navbar-brand" })
                 }
+                @Html.ActionLink("Корзина", "Index", "Cart", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav"></ul>
