--- a/StoreExample/Views/Phone/Delete.cshtml
+++ b/StoreExample/Views/Phone/Delete.cshtml
@@ -1,14 +1,11 @@
 ﻿@model StoreExample.Models.PhoneItem
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Удаление";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<div class="alert alert-danger">Вы уверены, что хотите удалить данный товар @Model.ModelOfPhone.ToString() из базы данных?</div>
 <div>
-    <h4>PhoneItem</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -73,8 +70,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Удалить" class="btn btn-danger" /> 
+            @Html.ActionLink("Отмена", "Index", "Home", new { area = "" }, new { @class = "btn btn-success " })
         </div>
     }
 </div>
