--- a/StoreExample/Views/Shared/_Layout.cshtml
+++ b/StoreExample/Views/Shared/_Layout.cshtml
@@ -11,42 +11,43 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-
                 @Html.ActionLink("PhoneStore", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-                @if (User.Identity.IsAuthenticated)
-                {
-                    @Html.ActionLink("(" + @PurchaseManager.GetNameByEmail(User.Identity.Name.ToString()) + ") " + "Выход", "Logoff", "Account", new { area = "" }, new { @class = "navbar-brand" })
-
-                }
-                else
-                {
-                    @Html.ActionLink("Вход", "Login", "Account", new { area = "" }, new { @class = "navbar-brand" })
-                    @Html.ActionLink("Регистрация", "Register", "Account", new { area = "" }, new { @class = "navbar-brand" })
-                }
-                <a href="../Cart/Index" class="navbar-brand" margin="left-top"  >
-                        <span class=" glyphicon glyphicon-shopping-cart "></span> Корзина
-                    </a>
-                @*@Html.ActionLink("Корзина", "Index", "Cart", new { area = "" }, new { @class = "navbar-brand" })*@
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav"></ul>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li><a href="#">Что-то</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="../Cart/Index"><span class=" glyphicon glyphicon-shopping-cart "></span> Корзина</a></li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                    <li><a href="~/Account/Logoff"><span class="glyphicon glyphicon-log-out"></span> Выйти (@PurchaseManager.GetNameByEmail(User.Identity.Name.ToString())) </a></li>
+                    }
+                    else
+                    {
+                    <li><a href="~/Account/Register"><span class="glyphicon glyphicon-user"></span> Регистрация</a></li>
+                    <li><a href="~/Account/Login"><span class="glyphicon glyphicon-log-in"></span> Войти</a></li>
+                    }
+                </ul>
             </div>
         </div>
-    </div>
+    </nav>
+
 
     <div class="container body-content">
+
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - PhoneStore</p>
         </footer>
     </div>
     <img class="sprite" />
