--- a/StoreExample/Views/Account/Login.cshtml
+++ b/StoreExample/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model StoreExample.Models.LoginModel
 
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Вход";
 }
 
 <h2>Login</h2>
@@ -33,14 +33,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Войти" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Вернуться назад", "Index")
 </div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
