--- a/StoreExample/Views/Cart/Index.cshtml
+++ b/StoreExample/Views/Cart/Index.cshtml
@@ -1,84 +1,72 @@
-﻿@model List<StoreExample.Models.CartLine>
+﻿
+@model List<StoreExample.Models.CartLine>
 @{
     ViewBag.Title = "Корзина";
 }
-
-<h2>Корзина</h2>
-<table class="table">
-    <tr>
-        <th>
-            Название
-        </th>
-        <th>
-            Описание
-        </th>
-        <th>
-            Изображение
-        </th>
-        <th>
-            Цена
-        </th>
-        <th>
-            Количество
-        </th>
-        <th></th>
-    </tr>
-    @if (Model != null)
-    {
-        foreach (var item2 in Model)
-        {
-
+<div class="container">
+    <table id="cart" class="table table-hover table-condensed">
+        <thead>
             <tr>
-
-                <td>
-                    @Html.DisplayFor(modelItem => item2.Phone_cart.ModelOfPhone)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item2.Phone_cart.Description)
-                </td>
-                <td>
-                    <a href="Instrumental/Details/@item2.Phone_cart.Id">
-                        <img src="@item2.Phone_cart.ImgUrl" width="200" height="350" />
-                    </a>
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item2.Phone_cart.Price)
-                </td>
-                <td>
-                    <div class="input-group" style="width: 150px">
-                        <span class="input-group-btn">
-                            <a href="~/Cart/MinusQuantityFromCart/@item2.Phone_cart.Id" type="button" class="btn btn-default btn-number" data-type="minus" data-field="quant[1]">
-
-<span class="glyphicon glyphicon-minus"></span>
-                            </a>
-                        </span>
-                        <input type="text" name="quant[1]" class="form-control input-number" value="@item2.Quantity" min="1" max="10">
-                        <span class="input-group-btn">
-                            <a href="~/Cart/PlusQuantityFromCart/@item2.Phone_cart.Id" type="button" class="btn btn-default btn-number" data-type="plus" data-field="quant[1]">
-                                <span class="glyphicon glyphicon-plus"></span>
-                            </a>
-                        </span>
-                    </div>
-                </td>
+                <th style="width:50%">Товар</th>
+                <th style="width:10%">Цена</th>
+                <th style="width:8%">Количество</th>
+                <th style="width:22%" class="text-center">Стоимость</th>
+                <th style="width:10%"></th>
             </tr>
-        }
-        <tr>
-            <th></th>
-            <th></th>
+        </thead>
+        <tbody>
+            @foreach (var item2 in Model)
+            {
+                <tr>
+                    <td data-th="Product">
+                        <div class="row">
+                            <div class="col-sm-2 hidden-xs"><img src="@item2.Phone_cart.ImgUrl" alt="..." class="img-responsive" /></div>
+                            <div class="col-sm-10">
+                                <h4 class="nomargin">@item2.Phone_cart.ModelOfPhone</h4>
+                                <p>@item2.Phone_cart.Description</p>
+                            </div>
+                        </div>
+                    </td>
+                    <td data-th="Price">@item2.Phone_cart.Price руб</td>
+                    <td data-th="Quantity" class="hidden-xs">
+                        <div class="input-group" style="width: 150px">
+                            <span class="input-group-btn">
+                                <a href="~/Cart/MinusQuantityFromCart/@item2.Phone_cart.Id" type="button" class="btn btn-default btn-number" data-type="minus" data-field="quant[1]">
 
-            <th>
-                Общая сумма
-            </th>
-            <td>
-                @ViewBag.TotalSum.ToString()  руб
-            </td>
-        </tr>
-
-
-    }
-
-</table>
-<button class="">@Html.ActionLink("Продолжить покупки", "Index", "Home", new { area = "" }, new { @class = "tab" })</button>
+                                    <span class="glyphicon glyphicon-minus"></span>
+                                </a>
+                            </span>
+                            <input type="text" name="quant[1]" class="form-control input-number" value="@item2.Quantity" min="1" max="10">
+                            <span class="input-group-btn">
+                                <a href="~/Cart/PlusQuantityFromCart/@item2.Phone_cart.Id" type="button" class="btn btn-default btn-number" data-type="plus" data-field="quant[1]">
+                                    <span class="glyphicon glyphicon-plus"></span>
+                                </a>
+                            </span>
+                        </div>
+                        @*<input type="number" class="form-control text-center" value="1">*@
+                    </td>
+                    <td data-th="Subtotal" class="text-center">1.99</td>
+                    <td>
+                        <a href="#" class="btn btn-danger">
+                            <span class=" glyphicon glyphicon-trash "></span>
+                        </a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+        <tfoot>
+            <tr class="visible-xs">
+                <td class="text-center"><strong>Сумма @ViewBag.TotalSum.ToString()  руб</strong></td>
+            </tr>
+            <tr>
+                <td><a href="~/Home/Index" class="btn btn-warning"><i class="fa fa-angle-left"></i> Продолжить покупки</a></td>
+                <td colspan="2" class="hidden-xs"></td>
+                <td class="hidden-xs text-center"><strong>Общая сумма @ViewBag.TotalSum.ToString() руб </strong></td>
+                <td><a href="#" class="btn btn-success btn-block">Оформить заказ <i class="fa fa-angle-right"></i></a></td>
+            </tr>
+        </tfoot>
+    </table>
+</div>
 
 
 
