--- a/StoreExample/Views/Cart/Index.cshtml
+++ b/StoreExample/Views/Cart/Index.cshtml
@@ -36,7 +36,7 @@
                                     <span class="glyphicon glyphicon-minus"></span>
                                 </a>
                             </span>
-                            <input type="text" name="quant[1]" class="form-control input-number" value="@item2.Quantity" min="1" max="10">
+                            <input type="text" name="quant[1]" class="form-control input-number" value="@item2.Quantity" min="1">
                             <span class="input-group-btn">
                                 <a href="~/Cart/PlusQuantityFromCart/@item2.Phone_cart.Id" type="button" class="btn btn-default btn-number" data-type="plus" data-field="quant[1]">
                                     <span class="glyphicon glyphicon-plus"></span>
